still a trillion bugs in employee shift filter

--- a/src/pages/punchcard/punchcard.scss
+++ b/src/pages/punchcard/punchcard.scss
@@ -78,4 +78,8 @@ page-punchcard {
 		margin-top: 50px;
 		height: 50px;
 	}
+
+	.cleardate {
+		float: left;
+	}
 }
